--- a/settings.json
+++ b/settings.json
@@ -7,12 +7,12 @@
 	"anticall": true,
 	"prefix": ".",
 	"language":"ind",
-	"ownerNumber": "62887435047326",
-	"ownerNumberr": "62887435047326",
-	"cr": "@ZeeoneOfc",
-	"ownername": "ZeeoneOfc",
-	"botname":"ΛᄂPΉΛ BӨƬ",
-	"thumb":"thumbnail_1.jpg",
-	"fakethumb":"thumbnail_1.jpg", 
-	"fake": " 「  ΛᄂPΉΛ BӨƬ  」\nCreated By @ZeeoneOfc"
+	"ownerNumber": "6281323870860",
+	"ownerNumberr": "6281323870860",
+	"cr": "@Nozzyソ",
+	"ownername": "Nozzyソ",
+	"botname":"Nzukenソ",
+	"thumb":"Nezuken.jpg",
+	"fakethumb":"Nezuken.jpg", 
+	"fake": " 「  NezukenBot  」\nCreated By @Nozzyソ"
 }
